# ranchovote

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
docs/: architecture.md  docs-build.md  glossary.md  index.md  rcv-resources.md  roadmap.md
scripts/: gen_ref_pages.py
src/ranchobud/: __init__.py  cli.py  ranchobud.py
src/ranchovote/: __init__.py  cli.py  contest.py  models.py  state.py  trace.py
src/ranchovote/io/: __init__.py  json.py
src/ranchovote/methods/: __init__.py  base.py  gregory_transfer.py  inclusive_gregory.py  meek.py
src/ranchovote/rules/: __init__.py  allocation.py  elimination.py  exclusion.py  selection.py  thresholds.py  transfers.py
src/ranchovote/services/: __init__.py  traces.py
src/ranchovote/storage/: __init__.py  base.py  duckdb.py  schema.py
src/ranchovote/tui/: __init__.py  app.py
src/ranchovote/web/: __init__.py  app.py
tests/: test_cli.py  test_domain_and_rules.py  test_duckdb_trace_store.py  test_gregory_transfer.py  test_inclusive_gregory.py  test_orchestration_and_interfaces.py
