[project]
name = "ranchobud"
version = "0.1.0"
description = "A collaborative budgeting algorithm based on Single Transferrable Vote."
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2",
    "pydantic>=2",
    "click>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs-material>=9",
    "pre-commit>=4",
    "pytest>=8",
    "ruff-lsp>=0.0.62",
    "ruff>=0.12",
]

[tool.ruff]
# Configurations that apply to both the `format` and `lint` subcommands.
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.format]
# Configuration specfic to the `format` subcommand.
# We use black compatible formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Configurations that apply to the `lint` subcommand.
preview = true # Required for NPY201
explicit-preview-rules = true # and ONLY NPY201
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C", # Limit cyclomatic complexity using mccabe
    "C4", # flake8-comprehensions
    "D", # pydocstyle errors
    "E", # pycodestyle errors
    "EXE", # executable file issues
    "F", # pyflakes
    "I", # isort
    "ICN", # flake8 import conventions
    "N", # pep8-naming
    "NPY", # NumPy specific checks
    "PD", # pandas checks
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie miscellaneous linting
    "PTH", # use pathlib
    "Q", # flake8-quotes
    "RET", # check return values
    "RSE", # unnecessary parenthises on raised exceptions
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "UP", # pyupgrade (use modern python syntax)
    "W", # pycodestyle warnings
    "ANN", # identify missing type annotations
    "ARG", # find unused arguments
    "ERA", # eradicate: finds commented out code
    "FURB", # refurb: general code quality/modernization. Still in preview.
    "PERF", # performance issues
    "PT", # pytest style
    "RUF", # Ruff specific rules
    "T", # Find print statements that should probably be logging
]
ignore = [
    "D401", # Require imperative mood in docstrings.
    "D417",
    "E501", # Overlong lines.
    "E203", # Space before ':' (black recommends to ignore)
    "E226", # Missing whitespace around arithmetic operator
    "E266", # Too many leading `#` before block comment
    "PD010", # Use of df.stack()
    "PD013", # Use of df.unstack()
    "PD015", # Use of pd.merge() rather than df.merge()
    "PD901", # df as variable name
    "RUF005", # Unpack iterables instead of concatenation
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports
"tests/*" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["ranchobud"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
