[project]
name = "ranchobud"
dynamic = ["version"]
description = "A collaborative budgeting algorithm based on Single Transferrable Vote."
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.3.2", "pandas>=3", "polars>=1.39", "pydantic>=2"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.1"

[dependency-groups]
dev = [
  "mdformat-mkdocs>=5.1.4,<6",
  "mdformat_simple_breaks>=0.1.0,<1",
  "mdformat-wikilink>=0.3.0,<1",
  "mdformat>=1.0.0,<2",
  "mdformat-footnote>=0.1.3,<1",
  "mdformat-front-matters>=2.0.0,<3",
  "mdformat-gfm>=1.0",
  "mdx-gh-links>=0.4",
  "mdx-truly-sane-lists>=1.3",
  "prek>=0.3.8",
  "pytest>=9",
  "ruff-lsp>=0.0.62",
  "ruff>=0.15",
  "ty>=0.0.29",
  "typos>=1.45.0,<2",
  "zensical>=0.0.32",
]

[tool.mdformat]
# Use "no" wrapping so paragraphs stay as single long lines, soft-wrapped in the editor.
# This avoids hard line-break churn in diffs and removes the need for a line-length limit.
wrap = "no"

[tool.ruff]
# Configurations that apply to both the `format` and `lint` sub-commands.
target-version = "py314"
line-length = 88
indent-width = 4

[tool.ruff.format]
# Configuration specific to the `format` sub-command.
# We use black compatible formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Configurations that apply to the `lint` sub-command.
preview = true # Required for NPY201
explicit-preview-rules = true # and ONLY NPY201
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C",    # Limit cyclomatic complexity using mccabe
  "C4",   # flake8-comprehensions
  "D",    # pydocstyle errors
  "E",    # pycodestyle errors
  "EXE",  # executable file issues
  "F",    # pyflakes
  "I",    # isort
  "ICN",  # flake8 import conventions
  "N",    # pep8-naming
  "NPY",  # NumPy specific checks
  "PD",   # pandas checks
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie miscellaneous linting
  "PTH",  # use pathlib
  "Q",    # flake8-quotes
  "RET",  # check return values
  "RSE",  # unnecessary parenthises on raised exceptions
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade (use modern python syntax)
  "W",    # pycodestyle warnings
  "ANN",  # identify missing type annotations
  "ARG",  # find unused arguments
  "ERA",  # eradicate: finds commented out code
  "FURB", # refurb: general code quality/modernization. Still in preview.
  "PERF", # performance issues
  "PT",   # pytest style
  "RUF",  # Ruff specific rules
  "T",    # Find print statements that should probably be logging
]
ignore = [
  "D401",   # Require imperative mood in docstrings.
  "D417",
  "E501",   # Overlong lines.
  "E203",   # Space before ':' (black recommends to ignore)
  "E226",   # Missing whitespace around arithmetic operator
  "E266",   # Too many leading `#` before block comment
  "PD010",  # Use of df.stack()
  "PD013",  # Use of df.unstack()
  "PD015",  # Use of pd.merge() rather than df.merge()
  "PD901",  # df as variable name
  "RUF005", # Unpack iterables instead of concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["ranchobud"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
